--- a/.gitattributes
+++ b/.gitattributes
@@ -1096,73 +1096,7 @@ packages/extra/fftw/Makefile.fpc -text
 packages/extra/fftw/example.pas -text
 packages/extra/fftw/fftw_s.pas -text
 packages/extra/fftw/readme.txt -text
-packages/extra/forms/Makefile svneol=native#text/plain
-packages/extra/forms/Makefile.fpc svneol=native#text/plain
-packages/extra/forms/README -text
-packages/extra/forms/USAGE -text
-packages/extra/forms/cursorfont.inc svneol=native#text/plain
-packages/extra/forms/demo/Makefile svneol=native#text/plain
-packages/extra/forms/demo/Makefile.fpc svneol=native#text/plain
-packages/extra/forms/demo/arrowbutton.pp svneol=native#text/plain
-packages/extra/forms/demo/bm1.xbm -text
-packages/extra/forms/demo/bm2.xbm -text
-packages/extra/forms/demo/borderwidth.pp svneol=native#text/plain
-packages/extra/forms/demo/boxtype.pp svneol=native#text/plain
-packages/extra/forms/demo/browserall.pp svneol=native#text/plain
-packages/extra/forms/demo/browserop.pp svneol=native#text/plain
-packages/extra/forms/demo/buttonall.pp svneol=native#text/plain
-packages/extra/forms/demo/butttypes.pp svneol=native#text/plain
-packages/extra/forms/demo/canvas.pp svneol=native#text/plain
-packages/extra/forms/demo/chartall.pp svneol=native#text/plain
-packages/extra/forms/demo/chartstrip.pp svneol=native#text/plain
-packages/extra/forms/demo/choice.pp svneol=native#text/plain
-packages/extra/forms/demo/colbrowser.pp svneol=native#text/plain
-packages/extra/forms/demo/colsel.pp svneol=native#text/plain
-packages/extra/forms/demo/colsel1.pp svneol=native#text/plain
-packages/extra/forms/demo/counter.pp svneol=native#text/plain
-packages/extra/forms/demo/crab.xpm -text
-packages/extra/forms/demo/crab45.xpm -text
-packages/extra/forms/demo/cursor.pp svneol=native#text/plain
-packages/extra/forms/demo/doc2p -text
-packages/extra/forms/demo/fbrowse.pp svneol=native#text/plain
-packages/extra/forms/demo/fbrowse1.pp svneol=native#text/plain
-packages/extra/forms/demo/fdial.pp svneol=native#text/plain
-packages/extra/forms/demo/flclock.pp svneol=native#text/plain
-packages/extra/forms/demo/fonts.pp svneol=native#text/plain
-packages/extra/forms/demo/free1.pp svneol=native#text/plain
-packages/extra/forms/demo/goodies.pp svneol=native#text/plain
-packages/extra/forms/demo/group.pp svneol=native#text/plain
-packages/extra/forms/demo/iconify.pp svneol=native#text/plain
-packages/extra/forms/demo/inputall.pp svneol=native#text/plain
-packages/extra/forms/demo/invslider.pp svneol=native#text/plain
-packages/extra/forms/demo/lalign.pp svneol=native#text/plain
-packages/extra/forms/demo/ldial.pp svneol=native#text/plain
-packages/extra/forms/demo/ll.pp svneol=native#text/plain
-packages/extra/forms/demo/longlabel.pp svneol=native#text/plain
-packages/extra/forms/demo/menu.pp svneol=native#text/plain
-packages/extra/forms/demo/minput.pp svneol=native#text/plain
-packages/extra/forms/demo/multilabel.pp svneol=native#text/plain
-packages/extra/forms/demo/ndial.pp svneol=native#text/plain
-packages/extra/forms/demo/newbutton.pp svneol=native#text/plain
-packages/extra/forms/demo/nomail.xbm -text
-packages/extra/forms/demo/objinactive.pp svneol=native#text/plain
-packages/extra/forms/demo/objpos.pp svneol=native#text/plain
-packages/extra/forms/demo/objreturn.pp svneol=native#text/plain
-packages/extra/forms/demo/porsche.xpm -text
-packages/extra/forms/demo/positioner.pp svneol=native#text/plain
-packages/extra/forms/demo/pup.pp svneol=native#text/plain
-packages/extra/forms/demo/pushbutton.pp svneol=native#text/plain
-packages/extra/forms/demo/pushme.pp svneol=native#text/plain
-packages/extra/forms/demo/secretinput.pp svneol=native#text/plain
-packages/extra/forms/demo/sliderall.pp svneol=native#text/plain
-packages/extra/forms/demo/srs.xbm -text
-packages/extra/forms/demo/touchbutton.pp svneol=native#text/plain
-packages/extra/forms/demo/xyplotover.pp svneol=native#text/plain
-packages/extra/forms/demo/yesno.pp svneol=native#text/plain
-packages/extra/forms/fd2pascal.pp svneol=native#text/plain
 packages/extra/forms/fpmake.inc svneol=native#text/plain
-packages/extra/forms/fpmake.pp svneol=native#text/plain
-packages/extra/forms/xforms.pp svneol=native#text/plain
 packages/extra/gbaunits/Makefile -text
 packages/extra/gbaunits/Makefile.fpc -text
 packages/extra/gbaunits/bios_asm.as -text
@@ -4660,6 +4594,72 @@ packages/x11/src/xshm.pp svneol=native#text/plain
 packages/x11/src/xutil.pp svneol=native#text/plain
 packages/x11/src/xv.pp svneol=native#text/plain
 packages/x11/src/xvlib.pp svneol=native#text/plain
+packages/xforms/Makefile svneol=native#text/plain
+packages/xforms/Makefile.fpc svneol=native#text/plain
+packages/xforms/README svneol=native#text/plain
+packages/xforms/USAGE svneol=native#text/plain
+packages/xforms/examples/Makefile svneol=native#text/plain
+packages/xforms/examples/Makefile.fpc svneol=native#text/plain
+packages/xforms/examples/arrowbutton.pp svneol=native#text/plain
+packages/xforms/examples/bm1.xbm svneol=native#text/plain
+packages/xforms/examples/bm2.xbm svneol=native#text/plain
+packages/xforms/examples/borderwidth.pp svneol=native#text/plain
+packages/xforms/examples/boxtype.pp svneol=native#text/plain
+packages/xforms/examples/browserall.pp svneol=native#text/plain
+packages/xforms/examples/browserop.pp svneol=native#text/plain
+packages/xforms/examples/buttonall.pp svneol=native#text/plain
+packages/xforms/examples/butttypes.pp svneol=native#text/plain
+packages/xforms/examples/canvas.pp svneol=native#text/plain
+packages/xforms/examples/chartall.pp svneol=native#text/plain
+packages/xforms/examples/chartstrip.pp svneol=native#text/plain
+packages/xforms/examples/choice.pp svneol=native#text/plain
+packages/xforms/examples/colbrowser.pp svneol=native#text/plain
+packages/xforms/examples/colsel.pp svneol=native#text/plain
+packages/xforms/examples/colsel1.pp svneol=native#text/plain
+packages/xforms/examples/counter.pp svneol=native#text/plain
+packages/xforms/examples/crab.xpm svneol=native#text/plain
+packages/xforms/examples/crab45.xpm svneol=native#text/plain
+packages/xforms/examples/cursor.pp svneol=native#text/plain
+packages/xforms/examples/fbrowse.pp svneol=native#text/plain
+packages/xforms/examples/fbrowse1.pp svneol=native#text/plain
+packages/xforms/examples/fdial.pp svneol=native#text/plain
+packages/xforms/examples/flclock.pp svneol=native#text/plain
+packages/xforms/examples/fonts.pp svneol=native#text/plain
+packages/xforms/examples/free1.pp svneol=native#text/plain
+packages/xforms/examples/goodies.pp svneol=native#text/plain
+packages/xforms/examples/group.pp svneol=native#text/plain
+packages/xforms/examples/iconify.pp svneol=native#text/plain
+packages/xforms/examples/inputall.pp svneol=native#text/plain
+packages/xforms/examples/invslider.pp svneol=native#text/plain
+packages/xforms/examples/lalign.pp svneol=native#text/plain
+packages/xforms/examples/ldial.pp svneol=native#text/plain
+packages/xforms/examples/ll.pp svneol=native#text/plain
+packages/xforms/examples/longlabel.pp svneol=native#text/plain
+packages/xforms/examples/menu.pp svneol=native#text/plain
+packages/xforms/examples/minput.pp svneol=native#text/plain
+packages/xforms/examples/multilabel.pp svneol=native#text/plain
+packages/xforms/examples/ndial.pp svneol=native#text/plain
+packages/xforms/examples/newbutton.pp svneol=native#text/plain
+packages/xforms/examples/nomail.xbm svneol=native#text/plain
+packages/xforms/examples/objinactive.pp svneol=native#text/plain
+packages/xforms/examples/objpos.pp svneol=native#text/plain
+packages/xforms/examples/objreturn.pp svneol=native#text/plain
+packages/xforms/examples/porsche.xpm svneol=native#text/plain
+packages/xforms/examples/positioner.pp svneol=native#text/plain
+packages/xforms/examples/pup.pp svneol=native#text/plain
+packages/xforms/examples/pushbutton.pp svneol=native#text/plain
+packages/xforms/examples/pushme.pp svneol=native#text/plain
+packages/xforms/examples/secretinput.pp svneol=native#text/plain
+packages/xforms/examples/sliderall.pp svneol=native#text/plain
+packages/xforms/examples/srs.xbm svneol=native#text/plain
+packages/xforms/examples/touchbutton.pp svneol=native#text/plain
+packages/xforms/examples/xyplotover.pp svneol=native#text/plain
+packages/xforms/examples/yesno.pp svneol=native#text/plain
+packages/xforms/fpmake.pp svneol=native#text/plain
+packages/xforms/scripts/doc2p svneol=native#text/plain
+packages/xforms/src/cursorfont.inc svneol=native#text/plain
+packages/xforms/src/fd2pascal.pp svneol=native#text/plain
+packages/xforms/src/xforms.pp svneol=native#text/plain
 packages/zlib/Makefile svneol=native#text/plain
 packages/zlib/Makefile.fpc svneol=native#text/plain
 packages/zlib/fpmake.pp svneol=native#text/plain
