--- a/.gitattributes
+++ b/.gitattributes
@@ -1782,16 +1782,6 @@ packages/extra/ptc/x11/x11modesi.inc svneol=native#text/x-pascal
 packages/extra/ptc/x11/x11windowdisplayd.inc svneol=native#text/x-pascal
 packages/extra/ptc/x11/x11windowdisplayi.inc svneol=native#text/x-pascal
 packages/extra/ptc/x11/xunikey.inc svneol=native#text/x-pascal
-packages/extra/rexx/Makefile svneol=native#text/plain
-packages/extra/rexx/Makefile.fpc svneol=native#text/plain
-packages/extra/rexx/fpmake.inc svneol=native#text/plain
-packages/extra/rexx/fpmake.pp svneol=native#text/plain
-packages/extra/rexx/readme.txt svneol=native#text/plain
-packages/extra/rexx/rexxsaa.pp svneol=native#text/plain
-packages/extra/rexx/test/Makefile svneol=native#text/plain
-packages/extra/rexx/test/Makefile.fpc svneol=native#text/plain
-packages/extra/rexx/test/backward.fnc -text
-packages/extra/rexx/test/callrexx.pas svneol=native#text/plain
 packages/extra/sdl/LGPL -text
 packages/extra/sdl/LGPL.addon -text
 packages/extra/sdl/MPL-1.1 -text
@@ -4253,6 +4243,15 @@ packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
 packages/regexpr/src/regexpr.pp svneol=native#text/plain
 packages/regexpr/tests/testreg1.pp svneol=native#text/plain
+packages/rexx/Makefile svneol=native#text/plain
+packages/rexx/Makefile.fpc svneol=native#text/plain
+packages/rexx/examples/Makefile svneol=native#text/plain
+packages/rexx/examples/Makefile.fpc svneol=native#text/plain
+packages/rexx/examples/backward.fnc svneol=native#text/plain
+packages/rexx/examples/callrexx.pas svneol=native#text/plain
+packages/rexx/fpmake.pp svneol=native#text/plain
+packages/rexx/readme.txt svneol=native#text/plain
+packages/rexx/src/rexxsaa.pp svneol=native#text/plain
 packages/sqlite/Makefile svneol=native#text/plain
 packages/sqlite/Makefile.fpc svneol=native#text/plain
 packages/sqlite/fpmake.pp svneol=native#text/plain
