--- a/.gitattributes
+++ b/.gitattributes
@@ -1116,14 +1116,6 @@ packages/extra/gbaunits/gba_video.pas -text
 packages/extra/gbaunits/gba_window.pas -text
 packages/extra/gbaunits/lgpl.txt -text
 packages/extra/gbaunits/libGBA4fpc.txt -text
-packages/extra/ggi/Makefile svneol=native#text/plain
-packages/extra/ggi/Makefile.fpc svneol=native#text/plain
-packages/extra/ggi/fpmake.inc svneol=native#text/plain
-packages/extra/ggi/fpmake.pp svneol=native#text/plain
-packages/extra/ggi/ggi.pp svneol=native#text/plain
-packages/extra/ggi/ggi1.pp svneol=native#text/plain
-packages/extra/ggi/ggi2d.pp svneol=native#text/plain
-packages/extra/ggi/gii.pp svneol=native#text/plain
 packages/extra/gnome1/Makefile svneol=native#text/plain
 packages/extra/gnome1/Makefile.fpc svneol=native#text/plain
 packages/extra/gnome1/fpmake.pp svneol=native#text/plain
@@ -2796,6 +2788,13 @@ packages/gdbm/fpmake.pp svneol=native#text/plain
 packages/gdbm/src/gdbm.pp svneol=native#text/plain
 packages/gdbm/tests/testgdbm.pp svneol=native#text/plain
 packages/gdbm/tests/testgdbm2.pp svneol=native#text/plain
+packages/ggi/Makefile svneol=native#text/plain
+packages/ggi/Makefile.fpc svneol=native#text/plain
+packages/ggi/examples/ggi1.pp svneol=native#text/plain
+packages/ggi/fpmake.pp svneol=native#text/plain
+packages/ggi/src/ggi.pp svneol=native#text/plain
+packages/ggi/src/ggi2d.pp svneol=native#text/plain
+packages/ggi/src/gii.pp svneol=native#text/plain
 packages/gtk1/Makefile svneol=native#text/plain
 packages/gtk1/Makefile.fpc svneol=native#text/plain
 packages/gtk1/README svneol=native#text/plain
