--- a/.gitattributes
+++ b/.gitattributes
@@ -8936,6 +8936,7 @@ utils/fpcm/fpcmmain.pp svneol=native#text/plain
 utils/fpcm/fpcmpkg.pp svneol=native#text/plain
 utils/fpcm/fpcmwr.pp svneol=native#text/plain
 utils/fpcm/makefile.exm -text
+utils/fpcm/printmakefilefpcrequirements.sh svneol=native#text/plain
 utils/fpcm/readme.txt svneol=native#text/plain
 utils/fpcres/Makefile svneol=native#text/plain
 utils/fpcres/Makefile.fpc svneol=native#text/plain
