--- a/.gitattributes
+++ b/.gitattributes
@@ -1408,13 +1408,6 @@ packages/extra/libndsfpc/nds/system.inc svneol=native#text/plain
 packages/extra/libndsfpc/nds/timers.inc svneol=native#text/plain
 packages/extra/libndsfpc/nds7.pp svneol=native#text/plain
 packages/extra/libndsfpc/nds9.pp svneol=native#text/plain
-packages/extra/lua/Makefile svneol=native#text/plain
-packages/extra/lua/Makefile.fpc svneol=native#text/plain
-packages/extra/lua/fpmake.inc svneol=native#text/plain
-packages/extra/lua/fpmake.pp svneol=native#text/plain
-packages/extra/lua/lauxlib.pas svneol=native#text/plain
-packages/extra/lua/lua.pas svneol=native#text/plain
-packages/extra/lua/lualib.pas svneol=native#text/plain
 packages/extra/openssl/Makefile svneol=native#text/plain
 packages/extra/openssl/Makefile.fpc svneol=native#text/plain
 packages/extra/openssl/examples/Makefile svneol=native#text/plain
@@ -3741,6 +3734,12 @@ packages/libpng/Makefile svneol=native#text/plain
 packages/libpng/Makefile.fpc svneol=native#text/plain
 packages/libpng/fpmake.pp svneol=native#text/plain
 packages/libpng/src/png.pp svneol=native#text/plain
+packages/lua/Makefile svneol=native#text/plain
+packages/lua/Makefile.fpc svneol=native#text/plain
+packages/lua/fpmake.pp svneol=native#text/plain
+packages/lua/src/lauxlib.pas svneol=native#text/plain
+packages/lua/src/lua.pas svneol=native#text/plain
+packages/lua/src/lualib.pas svneol=native#text/plain
 packages/mad/Makefile svneol=native#text/plain
 packages/mad/Makefile.fpc svneol=native#text/plain
 packages/mad/fpmake.pp svneol=native#text/plain
