--- a/.gitattributes
+++ b/.gitattributes
@@ -1408,13 +1408,6 @@ packages/extra/libndsfpc/nds/system.inc svneol=native#text/plain
 packages/extra/libndsfpc/nds/timers.inc svneol=native#text/plain
 packages/extra/libndsfpc/nds7.pp svneol=native#text/plain
 packages/extra/libndsfpc/nds9.pp svneol=native#text/plain
-packages/extra/openssl/Makefile svneol=native#text/plain
-packages/extra/openssl/Makefile.fpc svneol=native#text/plain
-packages/extra/openssl/examples/Makefile svneol=native#text/plain
-packages/extra/openssl/examples/test1.pas svneol=native#text/plain
-packages/extra/openssl/fpmake.inc svneol=native#text/plain
-packages/extra/openssl/fpmake.pp svneol=native#text/plain
-packages/extra/openssl/openssl.pas -text svneol=unset#text/plain
 packages/extra/os2units/Makefile svneol=native#text/plain
 packages/extra/os2units/Makefile.fpc svneol=native#text/plain
 packages/extra/os2units/clkdll/Makefile svneol=native#text/plain
@@ -4029,6 +4022,12 @@ packages/opengl/src/glut.pp svneol=native#text/plain
 packages/opengl/src/glx.pp svneol=native#text/plain
 packages/opengl/src/tinygl.inc svneol=native#text/plain
 packages/opengl/src/tinyglh.inc svneol=native#text/plain
+packages/openssl/Makefile svneol=native#text/plain
+packages/openssl/Makefile.fpc svneol=native#text/plain
+packages/openssl/examples/Makefile svneol=native#text/plain
+packages/openssl/examples/test1.pas svneol=native#text/plain
+packages/openssl/fpmake.pp svneol=native#text/plain
+packages/openssl/src/openssl.pas svneol=native#text/plain
 packages/oracle/Makefile svneol=native#text/plain
 packages/oracle/Makefile.fpc svneol=native#text/plain
 packages/oracle/README svneol=native#text/plain
