--- a/.gitattributes
+++ b/.gitattributes
@@ -1091,31 +1091,6 @@ packages/extra/amunits/utilunits/tagsarray.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/timerutils.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/vartags.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/wbargs.pas svneol=native#text/plain
-packages/extra/gbaunits/Makefile -text
-packages/extra/gbaunits/Makefile.fpc -text
-packages/extra/gbaunits/bios_asm.as -text
-packages/extra/gbaunits/core_asm.as -text
-packages/extra/gbaunits/def.inc -text
-packages/extra/gbaunits/fpmake.inc -text
-packages/extra/gbaunits/fpmake.pp -text
-packages/extra/gbaunits/gba_bg.pas -text
-packages/extra/gbaunits/gba_bios.pas -text
-packages/extra/gbaunits/gba_blend.pas -text
-packages/extra/gbaunits/gba_core.pas -text
-packages/extra/gbaunits/gba_dma.pas -text
-packages/extra/gbaunits/gba_fade.pas -text
-packages/extra/gbaunits/gba_input.pas -text
-packages/extra/gbaunits/gba_irq.pas -text
-packages/extra/gbaunits/gba_mosaic.pas -text
-packages/extra/gbaunits/gba_regs.pas -text
-packages/extra/gbaunits/gba_sio.pas -text
-packages/extra/gbaunits/gba_sprites.pas -text
-packages/extra/gbaunits/gba_timer.pas -text
-packages/extra/gbaunits/gba_types.pas -text
-packages/extra/gbaunits/gba_video.pas -text
-packages/extra/gbaunits/gba_window.pas -text
-packages/extra/gbaunits/lgpl.txt -text
-packages/extra/gbaunits/libGBA4fpc.txt -text
 packages/extra/gnome1/Makefile svneol=native#text/plain
 packages/extra/gnome1/Makefile.fpc svneol=native#text/plain
 packages/extra/gnome1/fpmake.pp svneol=native#text/plain
@@ -2724,6 +2699,30 @@ packages/fv/src/unixsmsg.inc svneol=native#text/plain
 packages/fv/src/validate.pas svneol=native#text/plain
 packages/fv/src/views.pas svneol=native#text/plain
 packages/fv/src/w32smsg.inc svneol=native#text/plain
+packages/gbaunits/Makefile svneol=native#text/plain
+packages/gbaunits/Makefile.fpc svneol=native#text/plain
+packages/gbaunits/fpmake.pp svneol=native#text/plain
+packages/gbaunits/lgpl.txt svneol=native#text/plain
+packages/gbaunits/libGBA4fpc.txt svneol=native#text/plain
+packages/gbaunits/src/bios_asm.as svneol=native#text/plain
+packages/gbaunits/src/core_asm.as svneol=native#text/plain
+packages/gbaunits/src/def.inc svneol=native#text/plain
+packages/gbaunits/src/gba_bg.pas svneol=native#text/plain
+packages/gbaunits/src/gba_bios.pas svneol=native#text/plain
+packages/gbaunits/src/gba_blend.pas svneol=native#text/plain
+packages/gbaunits/src/gba_core.pas svneol=native#text/plain
+packages/gbaunits/src/gba_dma.pas svneol=native#text/plain
+packages/gbaunits/src/gba_fade.pas svneol=native#text/plain
+packages/gbaunits/src/gba_input.pas svneol=native#text/plain
+packages/gbaunits/src/gba_irq.pas svneol=native#text/plain
+packages/gbaunits/src/gba_mosaic.pas svneol=native#text/plain
+packages/gbaunits/src/gba_regs.pas svneol=native#text/plain
+packages/gbaunits/src/gba_sio.pas svneol=native#text/plain
+packages/gbaunits/src/gba_sprites.pas svneol=native#text/plain
+packages/gbaunits/src/gba_timer.pas svneol=native#text/plain
+packages/gbaunits/src/gba_types.pas svneol=native#text/plain
+packages/gbaunits/src/gba_video.pas svneol=native#text/plain
+packages/gbaunits/src/gba_window.pas svneol=native#text/plain
 packages/gdbint/Makefile svneol=native#text/plain
 packages/gdbint/Makefile.fpc svneol=native#text/plain
 packages/gdbint/fpmake.pp svneol=native#text/plain
