--- a/.gitattributes
+++ b/.gitattributes
@@ -1208,31 +1208,6 @@ packages/extra/gnome1/zvt/zvt/libzvt.pp svneol=native#text/plain
 packages/extra/gnome1/zvt/zvt/lists.inc svneol=native#text/plain
 packages/extra/gnome1/zvt/zvt/vt.inc svneol=native#text/plain
 packages/extra/gnome1/zvt/zvt/vtx.inc svneol=native#text/plain
-packages/extra/graph/Makefile -text
-packages/extra/graph/Makefile.fpc svneol=native#text/plain
-packages/extra/graph/amiga/graph.pp svneol=native#text/plain
-packages/extra/graph/go32v2/graph.pp svneol=native#text/plain
-packages/extra/graph/go32v2/vesa.inc svneol=native#text/plain
-packages/extra/graph/go32v2/vesah.inc svneol=native#text/plain
-packages/extra/graph/inc/clip.inc svneol=native#text/plain
-packages/extra/graph/inc/fills.inc svneol=native#text/plain
-packages/extra/graph/inc/fontdata.inc svneol=native#text/plain
-packages/extra/graph/inc/graph.inc svneol=native#text/plain
-packages/extra/graph/inc/graph.tex -text
-packages/extra/graph/inc/graphh.inc svneol=native#text/plain
-packages/extra/graph/inc/gtext.inc svneol=native#text/plain
-packages/extra/graph/inc/makefile.inc svneol=native#text/plain
-packages/extra/graph/inc/modes.inc svneol=native#text/plain
-packages/extra/graph/inc/palette.inc svneol=native#text/plain
-packages/extra/graph/macosx/graph.pp svneol=native#text/plain
-packages/extra/graph/ptcgraph.pp svneol=native#text/x-pascal
-packages/extra/graph/sdlgraph/sdlgraph.pp svneol=native#text/plain
-packages/extra/graph/unix/ggigraph.pp svneol=native#text/plain
-packages/extra/graph/unix/graph.pp svneol=native#text/plain
-packages/extra/graph/unix/graph16.inc svneol=native#text/plain
-packages/extra/graph/win32/graph.pp svneol=native#text/plain
-packages/extra/graph/win32/wincrt.pp svneol=native#text/plain
-packages/extra/graph/win32/winmouse.pp svneol=native#text/plain
 packages/extra/libndsfpc/Makefile svneol=native#text/plain
 packages/extra/libndsfpc/Makefile.fpc svneol=native#text/plain
 packages/extra/libndsfpc/dswifi/dswifi7.inc svneol=native#text/plain
@@ -2640,6 +2615,31 @@ packages/ggi/fpmake.pp svneol=native#text/plain
 packages/ggi/src/ggi.pp svneol=native#text/plain
 packages/ggi/src/ggi2d.pp svneol=native#text/plain
 packages/ggi/src/gii.pp svneol=native#text/plain
+packages/graph/Makefile svneol=native#text/plain
+packages/graph/Makefile.fpc svneol=native#text/plain
+packages/graph/src/amiga/graph.pp svneol=native#text/plain
+packages/graph/src/go32v2/graph.pp svneol=native#text/plain
+packages/graph/src/go32v2/vesa.inc svneol=native#text/plain
+packages/graph/src/go32v2/vesah.inc svneol=native#text/plain
+packages/graph/src/inc/clip.inc svneol=native#text/plain
+packages/graph/src/inc/fills.inc svneol=native#text/plain
+packages/graph/src/inc/fontdata.inc svneol=native#text/plain
+packages/graph/src/inc/graph.inc svneol=native#text/plain
+packages/graph/src/inc/graph.tex -text
+packages/graph/src/inc/graphh.inc svneol=native#text/plain
+packages/graph/src/inc/gtext.inc svneol=native#text/plain
+packages/graph/src/inc/makefile.inc svneol=native#text/plain
+packages/graph/src/inc/modes.inc svneol=native#text/plain
+packages/graph/src/inc/palette.inc svneol=native#text/plain
+packages/graph/src/macosx/graph.pp svneol=native#text/plain
+packages/graph/src/ptcgraph.pp svneol=native#text/x-pascal
+packages/graph/src/sdlgraph/sdlgraph.pp svneol=native#text/plain
+packages/graph/src/unix/ggigraph.pp svneol=native#text/plain
+packages/graph/src/unix/graph.pp svneol=native#text/plain
+packages/graph/src/unix/graph16.inc svneol=native#text/plain
+packages/graph/src/win32/graph.pp svneol=native#text/plain
+packages/graph/src/win32/wincrt.pp svneol=native#text/plain
+packages/graph/src/win32/winmouse.pp svneol=native#text/plain
 packages/gtk1/Makefile svneol=native#text/plain
 packages/gtk1/Makefile.fpc svneol=native#text/plain
 packages/gtk1/README svneol=native#text/plain
