--- a/.gitattributes
+++ b/.gitattributes
@@ -3837,6 +3837,11 @@ packages/pthreads/src/pthrbsd.inc svneol=native#text/plain
 packages/pthreads/src/pthreads.pp svneol=native#text/plain
 packages/pthreads/src/pthrlinux.inc svneol=native#text/plain
 packages/pthreads/src/pthrsnos.inc svneol=native#text/plain
+packages/pxlib/Makefile svneol=native#text/plain
+packages/pxlib/Makefile.fpc svneol=native#text/plain
+packages/pxlib/examples/ppxview.pp svneol=native#text/plain
+packages/pxlib/fpmake.pp svneol=native#text/plain
+packages/pxlib/src/pxlib.pp svneol=native#text/plain
 packages/regexpr/Makefile svneol=native#text/plain
 packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
