--- a/.gitattributes
+++ b/.gitattributes
@@ -1023,6 +1023,7 @@ packages/bzip2/examples/pasbzip.pas svneol=native#text/plain
 packages/bzip2/fpmake.pp svneol=native#text/plain
 packages/bzip2/src/bzip2.pas svneol=native#text/plain
 packages/bzip2/src/bzip2i386.inc svneol=native#text/plain
+packages/cairo/Makefile svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
 packages/cdrom/Makefile svneol=native#text/plain
