--- a/.gitattributes
+++ b/.gitattributes
@@ -3901,6 +3901,20 @@ packages/svgalib/src/vgamouse.h svneol=native#text/plain
 packages/svgalib/src/vgamouse.pp svneol=native#text/plain
 packages/svgalib/tests/testvga.pp svneol=native#text/plain
 packages/svgalib/tests/vgatest.pp svneol=native#text/plain
+packages/symbolic/Makefile svneol=native#text/plain
+packages/symbolic/Makefile.fpc svneol=native#text/plain
+packages/symbolic/doc/optimization.txt svneol=native#text/plain
+packages/symbolic/doc/symbolic.txt svneol=native#text/plain
+packages/symbolic/examples/Makefile svneol=native#text/plain
+packages/symbolic/examples/Makefile.fpc svneol=native#text/plain
+packages/symbolic/examples/evaltest.pas svneol=native#text/plain
+packages/symbolic/examples/rpnthing.pas svneol=native#text/plain
+packages/symbolic/src/exprstrs.inc svneol=native#text/plain
+packages/symbolic/src/parsexpr.inc svneol=native#text/plain
+packages/symbolic/src/rearrang.inc svneol=native#text/plain
+packages/symbolic/src/symbexpr.inc svneol=native#text/plain
+packages/symbolic/src/symbolic.pas svneol=native#text/plain
+packages/symbolic/src/teval.inc svneol=native#text/plain
 packages/syslog/Makefile svneol=native#text/plain
 packages/syslog/Makefile.fpc svneol=native#text/plain
 packages/syslog/fpmake.pp svneol=native#text/plain
