--- a/.gitattributes
+++ b/.gitattributes
@@ -873,6 +873,8 @@ packages/bfd/Makefile.fpc svneol=native#text/plain
 packages/bfd/fpmake.pp svneol=native#text/plain
 packages/bfd/src/bfd.pas svneol=native#text/plain
 packages/bzip2/LICENSE svneol=native#text/plain
+packages/bzip2/Makefile svneol=native#text/plain
+packages/bzip2/Makefile.fpc svneol=native#text/plain
 packages/bzip2/examples/pasbzip.pas svneol=native#text/plain
 packages/bzip2/fpmake.pp svneol=native#text/plain
 packages/bzip2/src/bzip2.pas svneol=native#text/plain
