* grp+pwd: freebsd+darwin compat. Attempt at fixing demoes unsuccesful.
git-svn-id: trunk@10163 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4266,8 +4266,10 @@ packages/unzip/src/ziptypes.pp svneol=native#text/plain
 packages/users/Makefile svneol=native#text/plain
 packages/users/Makefile.fpc svneol=native#text/plain
 packages/users/examples/testpass.pp svneol=native#text/plain
+packages/users/examples/testpass2.pp svneol=native#text/plain
 packages/users/examples/testuser.pp svneol=native#text/plain
 packages/users/fpmake.pp svneol=native#text/plain
+packages/users/src/crypth.pp svneol=native#text/plain
 packages/users/src/grp.pp svneol=native#text/plain
 packages/users/src/pwd.pp svneol=native#text/plain
 packages/users/src/shadow.pp svneol=native#text/plain
