* one more fix for x86 fpu stack swapping (mantis #10757)
git-svn-id: trunk@10199 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7951,6 +7951,7 @@ tests/webtbs/tw1073.pp svneol=native#text/plain
 tests/webtbs/tw10736.pp svneol=native#text/plain
 tests/webtbs/tw10753.pp svneol=native#text/plain
 tests/webtbs/tw10753a.pp svneol=native#text/plain
+tests/webtbs/tw10757.pp svneol=native#text/plain
 tests/webtbs/tw1081.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
