+ more avr code
git-svn-id: trunk@10207 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -76,6 +76,7 @@ compiler/arm/rarmsup.inc svneol=native#text/plain
 compiler/arm/rgcpu.pas svneol=native#text/plain
 compiler/assemble.pas svneol=native#text/plain
 compiler/avr/aasmcpu.pas svneol=native#text/plain
+compiler/avr/agavrgas.pas svneol=native#text/plain
 compiler/avr/aoptcpu.pas svneol=native#text/plain
 compiler/avr/aoptcpub.pas svneol=native#text/plain
 compiler/avr/aoptcpud.pas svneol=native#text/plain
@@ -87,6 +88,9 @@ compiler/avr/cpunode.pas svneol=native#text/plain
 compiler/avr/cpupara.pas svneol=native#text/plain
 compiler/avr/cpupi.pas svneol=native#text/plain
 compiler/avr/cputarg.pas svneol=native#text/plain
+compiler/avr/itcpugas.pas svneol=native#text/plain
+compiler/avr/raavr.pas svneol=native#text/plain
+compiler/avr/raavrgas.pas svneol=native#text/plain
 compiler/avr/ravrcon.inc svneol=native#text/plain
 compiler/avr/ravrdwa.inc svneol=native#text/plain
 compiler/avr/ravrnor.inc svneol=native#text/plain
