--- a/.gitattributes
+++ b/.gitattributes
@@ -916,6 +916,7 @@ packages/bzip2/src/bzip2.pas svneol=native#text/plain
 packages/bzip2/src/bzip2i386.inc svneol=native#text/plain
 packages/cairo/Makefile svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
+packages/cairo/fpmake.pp svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
 packages/cdrom/Makefile svneol=native#text/plain
 packages/cdrom/Makefile.fpc svneol=native#text/plain
@@ -1778,6 +1779,7 @@ packages/gnome1/src/zvt/vt.inc svneol=native#text/plain
 packages/gnome1/src/zvt/vtx.inc svneol=native#text/plain
 packages/graph/Makefile svneol=native#text/plain
 packages/graph/Makefile.fpc svneol=native#text/plain
+packages/graph/fpmake.pp svneol=native#text/plain
 packages/graph/src/amiga/graph.pp svneol=native#text/plain
 packages/graph/src/go32v2/graph.pp svneol=native#text/plain
 packages/graph/src/go32v2/vesa.inc svneol=native#text/plain
@@ -2413,6 +2415,7 @@ packages/hash/src/unixcrypt.pas svneol=native#text/plain
 packages/hash/src/uuid.pas svneol=native#text/plain
 packages/hermes/Makefile svneol=native#text/plain
 packages/hermes/Makefile.fpc svneol=native#text/plain
+packages/hermes/fpmake.pp svneol=native#text/plain
 packages/hermes/src/clear.inc svneol=native#text/plain
 packages/hermes/src/convert.inc svneol=native#text/plain
 packages/hermes/src/d_32.inc svneol=native#text/plain
@@ -3343,6 +3346,7 @@ packages/openal/Makefile.fpc svneol=native#text/plain
 packages/openal/examples/Makefile svneol=native#text/plain
 packages/openal/examples/Makefile.fpc svneol=native#text/plain
 packages/openal/examples/madopenal.pas svneol=native#text/plain
+packages/openal/fpmake.pp svneol=native#text/plain
 packages/openal/src/alch.inc svneol=native#text/plain
 packages/openal/src/alexth.inc svneol=native#text/plain
 packages/openal/src/alh.inc svneol=native#text/plain
@@ -3708,6 +3712,7 @@ packages/ptc/examples/timer.pp svneol=native#text/plain
 packages/ptc/examples/tunnel.pp svneol=native#text/plain
 packages/ptc/examples/tunnel3d.pp svneol=native#text/plain
 packages/ptc/examples/tunnel3d.raw -text svneol=unset#raw/binary
+packages/ptc/fpmake.pp svneol=native#text/plain
 packages/ptc/src/aread.inc svneol=native#text/x-pascal
 packages/ptc/src/areai.inc svneol=native#text/x-pascal
 packages/ptc/src/baseconsoled.inc svneol=native#text/x-pascal
