* fixed writeln(<enum>) for 64 bit systems, resolves #10033
git-svn-id: trunk@10305 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7935,6 +7935,7 @@ tests/webtbs/tw0976.pp svneol=native#text/plain
 tests/webtbs/tw10002.pp svneol=native#text/plain
 tests/webtbs/tw10009.pp svneol=native#text/plain
 tests/webtbs/tw10013.pp svneol=native#text/plain
+tests/webtbs/tw10033.pp svneol=native#text/plain
 tests/webtbs/tw10072.pp svneol=native#text/plain
 tests/webtbs/tw10203.pp svneol=native#text/plain
 tests/webtbs/tw1021.pp svneol=native#text/plain
