--- a/.gitattributes
+++ b/.gitattributes
@@ -4731,6 +4731,13 @@ rtl/atari/prt0.as svneol=native#text/plain
 rtl/atari/readme -text
 rtl/atari/sysatari.pas svneol=native#text/plain
 rtl/atari/system.pas svneol=native#text/plain
+rtl/avr/avr.inc svneol=native#text/plain
+rtl/avr/int64p.inc svneol=native#text/plain
+rtl/avr/makefile.cpu svneol=native#text/plain
+rtl/avr/math.inc svneol=native#text/plain
+rtl/avr/set.inc svneol=native#text/plain
+rtl/avr/setjump.inc svneol=native#text/plain
+rtl/avr/setjumph.inc svneol=native#text/plain
 rtl/beos/Makefile svneol=native#text/plain
 rtl/beos/Makefile.fpc svneol=native#text/plain
 rtl/beos/baseunix.pp svneol=native#text/plain
